--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
   <div class="card">
     <h1>How did we do?</h1>
     <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
-    <ul>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-      <li>5</li>
-    </ul>
-    <button type="button">Submit</button>
+    <div class="rating-container">
+      <button class="rating-button" id="btn">1</button>
+      <button class="rating-button" id="btn">2</button>
+      <button class="rating-button" id="btn">3</button>
+      <button class="rating-button" id="btn">4</button>
+      <button class="rating-button" id="btn">5</button>
+    </div>
+    <button type="button" id="submit-btn">Submit</button>
   <!-- Rating state end -->
   </div>
   <!-- Thank you state start -->
-   <div class="thanks-card">
+   <div class="thanks-popup" id="popup">
       <p class="rating">You selected out of 5</p>
       <h1>Thank you!</h1>
       <p>We appreciate you taking the time to give a rating. If you ever need more support, 
