Update JS and add media queries

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Amarante&family=Coiny&family=Lavishly+Yours&family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Overpass:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -17,24 +17,23 @@
   <main>
   <!-- Rating state start -->
   <div class="card">
+    <img class="star-icon" src="icon-star.svg" alt="small orange star icon">
     <h1>How did we do?</h1>
     <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
-    <div class="rating-container">
-      <button class="rating-button" id="btn">1</button>
-      <button class="rating-button" id="btn">2</button>
-      <button class="rating-button" id="btn">3</button>
-      <button class="rating-button" id="btn">4</button>
-      <button class="rating-button" id="btn">5</button>
+    <div class="rating-container" id="rating-container">
+      <button class="rating-button">1</button>
+      <button class="rating-button">2</button>
+      <button class="rating-button">3</button>
+      <button class="rating-button">4</button>
+      <button class="rating-button">5</button>
     </div>
-    <button type="button" id="submit-btn">Submit</button>
+    <button type="button" id="submit-btn">SUBMIT</button>
   <!-- Rating state end -->
   </div>
   <!-- Thank you state start -->
    <div class="thanks-popup" id="popup">
-      <p class="rating">You selected out of 5</p>
-      <h1>Thank you!</h1>
-      <p>We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!</p>
+      <div class="thanks-image" alt="mobile phone image"></div>
+      <p id ="show-rating"></p>
       </div>
   <!-- Thank you state end -->
   </main>
